--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <title>HUD Mapa Pro - GPS & Radio SA</title>
+    <title>HUD SA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
 
     <script src='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js'></script>
@@ -56,12 +56,25 @@
             z-index: 1;
         }
 
-        /* Estilo del marcador del jugador (Punto azul real) */
-        .user-marker {
-            width: 18px; height: 18px;
-            background: #1e90ff; border: 3px solid white;
-            border-radius: 50%; box-shadow: 0 0 10px rgba(0,0,0,0.8);
-            z-index: 5;
+        /* --- FLECHA DEL JUGADOR CORREGIDA --- */
+        #player-container {
+            position: absolute;
+            top: 50%; left: 50%;
+            width: 45px; height: 45px;
+            transform: translate(-50%, -50%);
+            z-index: 10;
+            pointer-events: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #player-arrow {
+            width: 100%;
+            height: 100%;
+            /* Rotación de 180 para que la punta del pin apunte hacia arriba */
+            transform: rotate(180deg);
+            filter: drop-shadow(0 2px 4px rgba(0,0,0,0.5));
         }
 
         #radio-ui {
@@ -80,77 +93,16 @@
             pointer-events: none;
             transition: opacity 0.3s ease, transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             border: 4px solid var(--gta-yellow);
-            box-sizing: border-box;
         }
 
-        #radio-ui.active {
-            opacity: 1;
-            transform: translate(-50%, -50%) scale(1);
-        }
+        #radio-ui.active { opacity: 1; transform: translate(-50%, -50%) scale(1); }
+        .station-icon-radial { position: absolute; width: 45px; height: 45px; transform: translate(-50%, -50%); transition: 0.2s; filter: grayscale(1) opacity(0.4); z-index: 101; }
+        .station-icon-radial.highlight { filter: grayscale(0) opacity(1); transform: translate(-50%, -50%) scale(1.4); }
+        #station-logo { width: 120px; height: 120px; object-fit: contain; }
+        #station-name { color: var(--gta-yellow); font-size: 1.2rem; text-transform: uppercase; font-family: 'Arial Black', sans-serif; margin-top: 10px; text-shadow: 2px 2px 0px black; text-align: center; }
 
-        .station-icon-radial {
-            position: absolute;
-            width: 45px; height: 45px;
-            transform: translate(-50%, -50%);
-            transition: transform 0.2s, filter 0.2s;
-            filter: grayscale(1) opacity(0.4);
-            z-index: 101;
-        }
-
-        .station-icon-radial.highlight {
-            filter: grayscale(0) opacity(1);
-            transform: translate(-50%, -50%) scale(1.4);
-        }
-
-        #station-logo {
-            width: 120px; height: 120px;
-            object-fit: contain;
-            transition: transform 0.2s;
-        }
-
-        #station-name {
-            color: var(--gta-yellow);
-            font-size: 1.2rem;
-            text-transform: uppercase;
-            font-family: 'Arial Black', sans-serif;
-            margin-top: 10px;
-            text-shadow: 2px 2px 0px black;
-            text-align: center;
-            max-width: 80%;
-        }
-
-        #noise {
-            position: absolute;
-            width: 100%; height: 100%;
-            background: url('https://media.giphy.com/media/oEI9uWUicGLeE/giphy.gif');
-            opacity: 0;
-            border-radius: 50%;
-            mix-blend-mode: screen;
-            pointer-events: none;
-        }
-
-        #north-orbit {
-            position: absolute;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            z-index: 20;
-            pointer-events: none;
-            transition: transform 0.1s linear;
-        }
-
-        #north {
-            position: absolute;
-            top: 0; left: 50%;
-            transform: translate(-50%, -50%);
-            background: black;
-            color: white;
-            font-weight: bold;
-            font-size: calc(var(--hud-size) * 0.05);
-            padding: 1.5% 3.5%;
-            border-radius: 100px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-            white-space: nowrap;
-        }
+        #north-orbit { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 20; pointer-events: none; }
+        #north { position: absolute; top: 0; left: 50%; transform: translate(-50%, -50%); background: black; color: white; font-weight: bold; font-size: calc(var(--hud-size) * 0.05); padding: 1.5% 3.5%; border-radius: 100px; }
     </style>
 </head>
 
@@ -160,8 +112,14 @@
     <div id="hud">
         <div id="map"></div>
         
+        <div id="player-container">
+            <svg id="player-arrow" viewBox="0 0 34 50">
+                <path d="M17 2 C9 2 3 10 3 18 C3 30 17 45 17 45 C17 45 31 30 31 18 C31 10 25 2 17 2 Z" 
+                fill="white" stroke="black" stroke-width="4"/>
+            </svg>
+        </div>
+
         <div id="radio-ui">
-            <div id="noise"></div>
             <img id="station-logo" src="img/RadioOff.png" alt="radio">
             <div id="station-name">RADIO OFF</div>
         </div>
@@ -172,7 +130,7 @@
     </div>
 </div>
 
-<audio id="radio-audio" preload="metadata" loop></audio>
+<audio id="radio-audio" loop></audio>
 <audio id="static-sfx" src="https://www.soundjay.com/tv-and-radio/static-radio-01.mp3"></audio>
 <audio id="menu-sfx" src="img/gta-sa-menu.mp3"></audio>
 
@@ -183,31 +141,16 @@ const map = new maplibregl.Map({
     container: 'map', 
     style: 'https://tiles.openfreemap.org/styles/bright', 
     center: [-70.6483, -33.4569], 
-    zoom: 17.5, 
+    zoom: 18, 
     pitch: 0, 
     bearing: 0, 
     attributionControl: false, 
     interactive: false 
 });
 
-// Marcador del Jugador
-const elMarker = document.createElement('div');
-elMarker.className = 'user-marker';
-const marker = new maplibregl.Marker({element: elMarker}).setLngLat([-70.6483, -33.4569]).addTo(map);
-
 map.on('style.load', () => {
     map.setPaintProperty('background', 'background-color', paleta.tierra_general);
     if (map.getLayer('building')) { map.setPaintProperty('building', 'fill-color', paleta.edificios); map.setPaintProperty('building', 'fill-outline-color', '#000000'); }
-    map.getStyle().layers.forEach(layer => {
-        if (map.getLayer('water')) map.setPaintProperty('water', 'fill-color', paleta.agua);
-        if (map.getLayer('park')) map.setPaintProperty('park', 'fill-color', paleta.parques);
-        const esVia = layer.id.includes('highway') || layer.id.includes('bridge') || layer.id.includes('tunnel');
-        if (layer.type === 'line' && esVia) {
-            const esSendero = layer.id.includes('path') || layer.id.includes('footway') || layer.id.includes('track');
-            if (esSendero) { map.setPaintProperty(layer.id, 'line-color', paleta.senderos_marron); map.setPaintProperty(layer.id, 'line-width', 3); }
-            else { map.setPaintProperty(layer.id, 'line-color', paleta.calles_negras); map.setPaintProperty(layer.id, 'line-width', ['interpolate', ['linear'], ['zoom'], 14, 2, 18, 10]); }
-        }
-    });
 });
 
 // --- 2. CONFIGURACIÓN DE RADIO ---
@@ -244,10 +187,7 @@ function applyStation(idx) {
     currentIdx = idx; const s = stations[currentIdx]; audio.pause();
     if (s.file) {
         audio.src = s.file;
-        audio.onloadedmetadata = () => { 
-            audio.currentTime = Math.floor(Date.now() / 1000) % s.duration; 
-            audio.play().catch(e => console.log("Clic para activar")); 
-        };
+        audio.onloadedmetadata = () => { audio.currentTime = Math.floor(Date.now() / 1000) % s.duration; audio.play().catch(e => {}); };
         audio.load();
     } else { audio.src = ""; }
 }
@@ -263,7 +203,7 @@ function updateSelection(idx) {
 
 // --- 3. LÓGICA DE INTERACCIÓN ---
 const handleStart = (e) => {
-    if(e.type === 'touchstart') e.preventDefault();
+    if(e.cancelable) e.preventDefault();
     clearTimeout(hideTimeout);
     menuSfx.currentTime = 0; menuSfx.play();
     holdTimer = setTimeout(() => { isHolding = true; tempIdx = currentIdx; radioUi.classList.add('active'); updateSelection(currentIdx); }, 400);
@@ -273,7 +213,7 @@ const handleMove = (e) => {
     if (!isHolding) return;
     const touch = e.touches ? e.touches[0] : e;
     const rect = radioUi.getBoundingClientRect();
-    const angle = Math.atan2(touch.clientY - (rect.top + rect.height / 2), touch.clientX - (rect.left + rect.width / 2)) + Math.PI / 2;
+    const angle = Math.atan2(touch.clientY - (rect.top + rect.height/2), touch.clientX - (rect.left + rect.width/2)) + Math.PI / 2;
     const idx = Math.round(((angle < 0 ? angle + Math.PI*2 : angle) / (Math.PI*2)) * stations.length) % stations.length;
     if (idx !== tempIdx) updateSelection(idx);
 };
@@ -299,34 +239,35 @@ window.addEventListener('mousedown', handleStart);
 window.addEventListener('mousemove', handleMove);
 window.addEventListener('mouseup', handleEnd);
 
-// --- 4. GPS Y PERMISOS ---
-function initSystem() {
-    // WakeLock para que no se apague la pantalla
+// --- 4. GPS Y BRÚJULA (CORREGIDO) ---
+function startTracking() {
     if ('wakeLock' in navigator) navigator.wakeLock.request('screen').catch(()=>{});
 
-    // Iniciar Rastreo GPS
-    if (navigator.geolocation) {
-        navigator.geolocation.watchPosition(pos => {
-            const { latitude, longitude } = pos.coords;
-            marker.setLngLat([longitude, latitude]);
-            map.easeTo({ center: [longitude, latitude], duration: 1000 });
-        }, (err) => alert("Error GPS: " + err.message), { enableHighAccuracy: true, maximumAge: 0 });
-    }
+    const geoOptions = { enableHighAccuracy: true, timeout: 15000, maximumAge: 0 };
+    
+    // Rastreo GPS
+    navigator.geolocation.watchPosition(pos => {
+        const { latitude, longitude } = pos.coords;
+        map.easeTo({ center: [longitude, latitude], duration: 1000 });
+    }, (err) => console.error("Error GPS: " + err.message), geoOptions);
 
-    // Iniciar Brújula
-    const handleOrient = (e) => {
-        const heading = e.webkitCompassHeading || (e.alpha ? 360 - e.alpha : 0);
+    // Brújula
+    const handleOrientation = (event) => {
+        let heading = event.webkitCompassHeading || (event.alpha ? 360 - event.alpha : 0);
         map.setBearing(heading);
         document.getElementById('north-orbit').style.transform = `rotate(${-heading}deg)`;
     };
 
     if (typeof DeviceOrientationEvent !== 'undefined' && typeof DeviceOrientationEvent.requestPermission === 'function') {
-        DeviceOrientationEvent.requestPermission().then(res => { if (res === 'granted') window.addEventListener('deviceorientation', handleOrient); });
-    } else { window.addEventListener('deviceorientation', handleOrient); }
+        DeviceOrientationEvent.requestPermission().then(res => {
+            if (res === 'granted') window.addEventListener('deviceorientation', handleOrientation);
+        });
+    } else {
+        window.addEventListener('deviceorientation', handleOrientation);
+    }
 }
 
-// Activar al primer toque
-document.body.addEventListener('click', initSystem, {once: true});
+document.body.addEventListener('click', startTracking, {once: true});
 </script>
 </body>
 </html>
